edc0.tex: editorial y cambio de copyright a 2010

--- a/edc0.tex
+++ b/edc0.tex
@@ -2,7 +2,7 @@
 
 \pdfcode \begingroup\corkfont
   \pdfinfo{
-   /Author (© Ramón Casares 2009)
+   /Author (© Ramón Casares 2010)
    /Title (El doble compresor)
    /Subject (La teoría de la información)
    /Keywords (filosofía epistemología problema
@@ -54,15 +54,14 @@
  es un Bugatti Atlantic 57SC, de 1938,\par
  concretamente el que tiene el número de chasis 57591.\par
  Se trata del cuarto, y último, de los Atlantic que se construyeron.\par
- Los derechos de copia de estas dos fotografías pertenecen a
-   Michael Furman.\par
+ Michael Furman posee los derechos de copia de estas dos fotografías.\par
 
 \vglue 2pc
 
  {\sl El doble compresor}\par
  {\sl La teoría de la información}\par
  Versión: \todayiso \par
- \copyright\ Ramón Casares, 2009\par
+ \copyright\ Ramón Casares, 2010\par
  C/ San Andrés, 112 (4º piso)\par
  E--15003 A Coruña ({\sc España})\par
  Teléfonos: 981 183 997 / 981 229 531\par
