edc3.tex: editorial en \S64 \P2 y mejora en \S72 \P4
¿Por qué aprendemos antes a hablar que a dibujar?

--- a/edc3.tex
+++ b/edc3.tex
@@ -214,7 +214,7 @@ propiedades que determinan un objeto concreto, y, de esta manera, pueden
 después recuperar ese objeto al oir el sonido que le sirve de nombre.
 Esto significa que muchas especies tienen una cierta facilidad para
 desarrollar un lenguaje semántico. Lo curioso es que ninguna lo
-desarrolla efectivamente.
+llega a desarrollar completamente.
 
 Sospecho que, para usted, es muy poco útil que le describa la
 ^actualidad^, que es lo que justo ahora estoy yo percibiendo. Porque, si
@@ -609,10 +609,11 @@ aprendemos antes a hablar que a dibujar? Resumamos primero los hechos.
 Somos la única ^especie^ que usa un ^lenguaje simbólico^, y la única que
 dibuja. Además, comenzamos antes a hablar que a dibujar, y, cuando lo
 hacemos, representamos la imagen mental. Yo diría que, lo que sucede, es
-que para dibujar hemos de ver los objetos mentales, y que sólo al hablar
-{\em vemos} los objetos mentales, y lo digo. El lenguaje simbólico nos
-permite acceder a nuestra propia imagen mental. ¿No es sorprendente?
-Pero ---se pregunta usted--- ¿puede ser cierto?
+que para dibujar hemos de ver los objetos producidos por nuestra propia
+percepción, y que sólo al aprender a hablar empezamos a {\em verlos},
+y lo digo. El lenguaje simbólico nos da acceso a nuestra propia imagen
+mental. ¿No es sorprendente? Pero ---se pregunta usted--- ¿puede ser
+cierto?
 
 
 \Section La introspección
