edc5.tex: mejoro \S119 \P3
Era exagerado suponer que se puede no recordar haberse cruzado con
alguien. He rebajado la afirmación, para que el ejemplo sea más
fácilmente asumible.

--- a/edc5.tex
+++ b/edc5.tex
@@ -388,8 +388,8 @@ una actividad sin ser consciente de ella. Si, por ejemplo, hace cada día
 el mismo trayecto para ir desde su casa hasta la oficina en donde
 trabaja, es fácil que sus pensamientos le distraigan la atención, y sea
 inconsciente del camino recorrido. Si va caminando, entonces es seguro
-que ha evitado a los otros transeuntes, aunque no recuerde siquiera si
-se ha cruzado alguno o no. Esto muestra que el comportamiento no
+que ha evitado a los otros transeuntes y esquivado las farolas, aunque
+no se haya percatado de ello. Esto muestra que el comportamiento no
 consciente puede ser muy complejo, y que la complejidad no marca la
 diferencia que media entre un acto consciente y otro que no lo es.
 
