edc6.tex: dos mejoras editoriales
En \S145 \P2 bajo de "enfermedad mortal, incurable y rápida" a
"enfermedad incurable y mortal".
En \S156 \P4 cambio "por si se decide usted a adherirse a ella" por
"por si decidiera usted que le interesa adherirse a ella".

--- a/edc6.tex
+++ b/edc6.tex
@@ -267,7 +267,7 @@ instinto de supervivencia.
 %
 Hay más posibilidades. Ante un ^dolor^ insoportable, un sujeto puede
 resolver que no le compensa padecer tanto. Con mayor razón si el dolor
-se debe a una enfermedad mortal, incurable y rápida.
+se debe a una enfermedad incurable y mortal.
 
 He dejado para el final el caso más interesante. Los sujetos, como le
 vengo diciendo, somos inquisitivos y, por diseño, buscamos las razones y
@@ -773,9 +773,9 @@ representación semántica. La ^verdad^ es la adecuación fiel de la
 ^sintaxis^ a la ^semántica^.
 
 Quiero que vea ahora algunas características de mi versión de la verdad,
-por si se decide usted a adherirse a ella. La verdad no es absoluta,
-porque depende del ^sujeto^. Pero, sin embargo, no depende de la
-^voluntad^, porque la ^percepción^ es un mecanismo que viene
+por si decidiera usted que le interesa adherirse a ella. La verdad no
+es absoluta, porque depende del ^sujeto^. Pero, sin embargo, no depende
+de la ^voluntad^, porque la ^percepción^ es un mecanismo que viene 
 especificado en los ^genes^ y sobre el que no tenemos control voluntario
 alguno. Vemos blanca la nieve, sin elección. Así que `la nieve es
 blanca' es una verdad firme, y que puede verificarse; basta mirar. Un
