--- a/edc4.tex
+++ b/edc4.tex
@@ -300,6 +300,7 @@ podría ser el caso. Observe que ``dígame cuál es su nombre'' tampoco
 resuelve el asunto definitivamente, pero que la pregunta directa,
 ``¿cuál es su nombre?'', sí que lo zanja.
 
+\goodbreak
 \setbox2=\hbox{$\vdots$}\ht2=0pt\dp2=0pt
 
 El entrecomillado es enormente potente. Suponga que
