--- a/edc5.tex
+++ b/edc5.tex
@@ -369,6 +369,8 @@ sujetos. Es actuar sin que nuestros actos nos dejen recuerdos
 conscientes de lo que hemos hecho. Es como vivir un ^sueño^ eterno. ¿No
 sería una ^pesadilla^?
 
+\eject
+
 Pero tampoco tiene que retroceder a su niñez para hacerse una idea de la
 diferencia que supone la ^consciencia^. Supongamos que usted es un
 cocinero experimentado, que su plato favorito es la ^tortilla^, y que ha
