edc3.tex: dos editoriales
Me llevo la última frase de la \S81 \P2, al final de la \S82.
Cambio la alineación del display largo de la \S86 \P1.

--- a/edc3.tex
+++ b/edc3.tex
@@ -921,9 +921,7 @@ que \[Klir] denomina problema de la caja negra puro. El problema
 aparente es el problema mínimo, es decir, es el problema del que nada se
 sabe. Aplicando esta terminología a la vida, resulta que el ^problema de
 la supervivencia^ es un problema aparente. Y, por esto, el problema
-aparente es literalmente el origen de todo. El problema aparente de la
-supervivencia proporciona el primer ^bitio^ de información, y también
-los siguientes.
+aparente es literalmente el origen de todo.
 
 Lo único que sabemos sobre un problema aparente es que es un problema, y
 no otra cosa. Sabemos, entonces, que consta de libertad y de una
@@ -998,7 +996,9 @@ primera vez, ocurre que antes de acometer su resolución hay
 ^incertidumbre^ acerca de su solución. Así que cada resolución de un
 problema aparente aporta ^información^, conclusión que generaliza la
 ^ley de la información incesante^ a la ^resolución^ de todos los
-problemas aparentes, incluido el de la supervivencia.
+problemas aparentes, incluido el de la supervivencia. El problema
+aparente de la supervivencia proporciona el primer ^bitio^  de
+información, y también los siguientes.
 
 
 \Section Somos resoluciones
@@ -1169,7 +1169,7 @@ $$\eqalign{
   0       &= (x - 2)x \cr
   [x - 2 = 0]           &\lor [x = 0] \cr
   [x + (-2) = 0]        &\lor [x = 0] \cr
-  [(x + (- 2)) + 2 = 0 &+ 2] \lor [x = 0] \cr
+  [(x + (- 2)) + 2 = 0  \phantom]&\hbox{+}\phantom[ 2] \lor [x = 0] \cr
   [x + (-2 + 2) = 2]    &\lor [x = 0] \cr
   [x + 0 = 2]           &\lor [x = 0] \cr
   [x = 2]               &\lor [x = 0] .}$$
