Global: usaba indebidamente "ignorancia" por "incertidumbre"
En el cuadro sinóptico de la \S49 \P1, ponía "Ignorancia" en donde debía
poner "Indeterminación".

Ahora he revisado que hago sinónimos "ignorancia" y "desconocimiento".
También hago sinónimos "indeterminación" e "incertidumbre".
En realidad, "indeterminación" es la manera objetivista de referirse
a la "incertidumbre".

La \S53 \P1 está completamente revisada, porque había muchas confusiones.
Lo que elevo a postulado es "la incertidumbre del sujeto" (\S53 \P3).

En la \S155 \P4 usaba "ignorancia" cuando debía usar "indeterminación".

--- a/edc2.tex
+++ b/edc2.tex
@@ -216,8 +216,8 @@ averiguar qué es la probabilidad.
 \Section La probabilidad
 
 La ^probabilidad^ sirve para estudiar aquellas situaciones en las que
-ignoramos lo que va a ocurrir, pero sabemos cómo tiene que ser la
-^estadística^ de lo que suceda. Si lo ignoramos todo, entonces ni la
+desconocemos lo que va a ocurrir, pero sabemos cómo tiene que ser la
+^estadística^ de lo que suceda. Si lo desconocemos todo, entonces ni la
 probabilidad nos vale. Pero, ¿hay alguna situación sobre la que no
 podamos hacer ninguna conjetura? Y aun si la hubiera, ¿sería
 provechoso elucubrar sobre tan ignoto asunto?
@@ -348,13 +348,13 @@ obligados a utilizar una ley probabilística para describirlo
 científicamente. Por último, si tuviéramos que describir científicamente
 el comportamiento de un sujeto libre, también tendríamos que usar una
 ley probabilística.
-$$\hbox{Indeterminación}\llave{Azar\cr Desconocimiento\cr Libertad}$$
+$$\hbox{Indeterminación}\llave{Azar\cr Ignorancia\cr Libertad}$$
 
 La ley del ^dado^ se debería al ^azar^, o al ^desconocimiento^ de todas
 las variables físicas que intervienen en una tirada de dado. La ley que
 describe el destino de sus ^vacaciones^ se debería a su ^libre
-albedrío^, o al desconocimiento de todas las circunstancias y procesos
-cerebrales que intervienen en sus decisiones.
+albedrío^, o a la ^ignorancia^ que supone no conocer todas las
+circunstancias y procesos cerebrales que intervienen en sus decisiones.
 
 Cuando nos encontramos con indeterminación, cualquiera que sea su
 origen, hay ^incertidumbre^ y no podemos asegurar qué sucederá, así que
@@ -397,7 +397,7 @@ y dividir para calcular las frecuencias.
 Puesto que la irracionalidad cabe en las estadísticas, las verdaderas
 leyes son las leyes causales. Las leyes causales explican, son
 racionales. Las leyes probabilísticas no explican sino que, al
-contrario, se utilizan cuando se ignoran las causas. Las leyes
+contrario, se utilizan cuando se desconocen las causas. Las leyes
 probabilísticas no son más que estadísticas.
 
 Por ser la ^libertad^ una de las fuentes de la probabilidad, nuestra
@@ -718,11 +718,11 @@ Hemos prescindido del ^principio de interacción^, pero no del ^principio
 de determinación^ de la medida. Las medidas no son nunca aleatorias,
 porque cuando medimos obtenemos datos determinados. La ^medida^ es el
 fenómeno, \latin{ergo} los fenómenos no pueden ser aleatorios. Esto
-elimina al ^azar^ como fuente de indeterminación. No hay azar, sino
-^desconocimiento^ y ^libertad^.
-$$\hbox{Ignorancia}\llave{Desconocimiento\cr Libertad}$$
+elimina al ^azar^ como fuente de ^indeterminación^ o ^incertidumbre^.
+No hay azar, sino ^ignorancia^, o ^desconocimiento^, y ^libertad^.
+$$\hbox{Indeterminación}\llave{Ignorancia\cr Libertad}$$
 
-La ^vida^ se juega en la ^ignorancia^, entre el desconocimiento y la
+La ^vida^ se juega en la ^incertidumbre^, entre la ignorancia y la
 libertad, y su fruto es el ^conocimiento^. Por supuesto, la vida juega a
 no morir. La ignorancia no se puede deber a la imposibilidad de conocer
 el fenómeno no perturbado, porque negamos que haya tal. Lo he escrito en
@@ -860,12 +860,12 @@ La vida juega a no ^morir^, y sin libertad no hay juego.
 
 \Section La ley de la información incesante
 
-La ^aleatoriedad^ es una propiedad del ^objeto^. La ^ignorancia^ es el
-estado natural del ^sujeto^. La ^libertad^ es la ignorancia referida al
-futuro. El ^desconocimiento^ es la ignorancia referida al pasado. La
-aleatoriedad es la proyección de la ignorancia del sujeto sobre el
-objeto. La ^probabilidad^ es una herramienta que usa el sujeto para
-describir lo que él conoce, a pesar de su ignorancia intrínseca.
+La ^aleatoriedad^ es una propiedad del ^objeto^. La ^incertidumbre^ es
+el estado natural del ^sujeto^. La ^libertad^ es la ^indeterminación^
+referida al futuro. El ^desconocimiento^ es la incertidumbre referida al
+pasado. La aleatoriedad es la proyección de la incertidumbre del sujeto
+sobre el objeto. La ^probabilidad^ es una herramienta que usa el sujeto
+para describir lo que él conoce, a pesar de su incertidumbre intrínseca.
 
 Sostener que la ^ley^ física no describe el estado de la partícula, sino
 nuestro ^conocimiento^ de la situación, disuelve las paradojas
@@ -873,7 +873,7 @@ cuánticas. Es obvio que cuando medimos conocemos lo que ocurre, para eso
 medimos, y que cuando no medimos nuestro conocimiento es menos preciso,
 porque somos ignorantes; usted y yo también.
 
-Le propongo elevar a postulado la ignorancia del sujeto, ¿se atreve?
+Le propongo elevar a postulado la incertidumbre del sujeto, ¿se atreve?
 Nunca ningún sujeto puede asegurar completamente cual será el resultado
 de una ^medición^ aún no realizada. Porque hay libertad y el ^futuro^
 está abierto, o porque el sujeto es ignorante, que tanto monta, monta
