--- a/edc6.tex
+++ b/edc6.tex
@@ -719,11 +719,11 @@ Ellos los ^materialistas^ aceptan el azar pero rechazan la libertad.
 Justo lo contrario que nosotros los ^subjetivistas^, que rechazamos el
 azar y aceptamos la libertad. Hay, por último, un grupo de materialistas
 radicales, denominados ^deterministas^, que únicamente aceptan el
-desconocimiento como fuente de ignorancia.
+desconocimiento como fuente de indeterminación.
 $$\vbox{\halign{\strut
   \hfil#\quad&\vrule\quad\hfil#\hfil&\quad\hfil#\hfil&
               \quad\hfil#\hfil\quad\vrule\crcr
-  Probabilidad& Azar& Desconocimiento& Libertad\cr
+  Probabilidad& Azar& Ignorancia& Libertad\cr
   \noalign{\hrule}
   Dualismo&\sc     sí&\sc sí&\sc sí\cr
   Materialismo&\sc sí&\sc sí&\sc no\cr
