edc2.tex: editorial
En \S53 \P3: "simpre" -> "siempre"

--- a/edc2.tex
+++ b/edc2.tex
@@ -878,7 +878,7 @@ Nunca ningún sujeto puede asegurar completamente cual será el resultado
 de una ^medición^ aún no realizada. Porque hay libertad y el ^futuro^
 está abierto, o porque el sujeto es ignorante, que tanto monta, monta
 tanto. Y, como el sujeto no está seguro, el resultado de la medición
-simpre le disipa alguna ^incertidumbre^ y le añade conocimiento. Ya
+siempre le disipa alguna ^incertidumbre^ y le añade conocimiento. Ya
 podemos formular la ^ley de la información incesante^: ``Toda medición
 aporta ^información^ al sujeto que mide''.
 
