letters/pentalfa.tex: completo el sesumen binomial

--- a/letters/pentalfa.tex
+++ b/letters/pentalfa.tex
@@ -59,78 +59,70 @@ acusara recibo de esta carta a mi dirección de correo electrónico. Gracias.
 
 \break
 
-\parskip=0pt
+\font\cal=cmsy10 scaled1200
+\def\s(#1){({\cal x}#1)}
 
-El doble compresor: resumen.
+\null
+\vskip2pc
 
-Objetivo: introducirse por las grietas del materialismo.
+{\bf El doble compresor: resumen.}
 
-Percepción: las líneas son artefactos.
+Objetivo: introducirse por las grietas del materialismo. \s(5)
 
-Subjetivismo: {\sc Kant} y el mito del restaurante.
+Percepción: las líneas son artefactos. \s(17)
 
-Todo es información: incluso la vida.
+Subjetivismo: {\sc Kant} y el mito del restaurante. \s(26)
 
-Información y probabilidad: información y energía.
+Todo es información: incluso la vida. \s(28)
 
-Las tres fuentes de la probabilidad: azar, ignorancia y libertad.
+Las tres fuentes de la probabilidad: azar, ignorancia y libertad. \s(39)
 
-Las paradojas cuánticas: la medida es el fenómeno.
+Información y probabilidad: información y energía. \s(45)
 
-Libertad: el tiempo es irreversible.
+Las paradojas cuánticas: la medida es el fenómeno. \s(48)
 
-Ley de la información incesante: no hay certidumbre absoluta.
+Libertad: el tiempo es irreversible. \s(51)
 
-Posibilidad: el habla excede la realidad.
+Ley de la información incesante: no hay certidumbre absoluta. \s(53)
 
-Habla y percepción: Sintaxis y semántica.
+Posibilidad: el habla excede la realidad. \s(56)
 
-Dibujo: introspección y habla.
+Habla y percepción: Sintaxis y semántica. \s(62)
 
-Problema: libertad y condición.
+Dibujo: introspección y habla. \s(73)
 
-Problema aparente: somos resoluciones.
+Problema: libertad y condición. \s(78)
 
-Sintaxis recursiva: expresión de resoluciones.
+Problema aparente: somos resoluciones. \s(81)
 
-Recursividad: {\sc Gödel} y {\sc Turing}.
+Sintaxis recursiva: expresión de resoluciones. \s(94)
 
-Evolución: mejora de resoluciones.
+Recursividad: {\sc Gödel} y {\sc Turing}. \s(101)
 
-Sujeto: habla.
+Evolución: mejora de resoluciones. \s(107)
 
-Consciencia: habla.
+Sujeto: habla. \s(115)
 
-Pensar: hablar con uno mismo.
+Consciencia: habla. \s(117)
 
-El sentido de la vida: entendemos para vivir.
+Pensar: hablar con uno mismo. \s(125)
 
-Teoría: resolución sin enfrentamiento.
+Teoría: resolución sin enfrentamiento. \s(132)
 
+El mundo es un enigma: pero, al analizarlo, queda una conjunción.
+\s(135)
 
+Yo: autobiografía, ¡qué triste! \s(139)
 
-Resumen: todo son datos (\S160).
+El sentido de la vida: entendemos para vivir. \s(144)
 
+La epífisis de {\sc Descartes}: el motor sintáctico de {\sc Turing}. 
+\s(150)
 
+Subjetivismo: el exterior no es subjetivo, pero tampoco podemos
+conocerlo. \s(157)
 
-
-
-
-
-
+Resumen: todo son datos. \s(160)
 
 \bye
-
-
-
-
-
-
-
-
-
-
-
-
-
 
