edc1.tex, edc.ndx: quito del índice "Dios - único responsable"
Lo unifico con las otras entradas de "Dios"

--- a/edc1.tex
+++ b/edc1.tex
@@ -235,10 +235,9 @@ naturales, sin que ninguna ^voluntad^ pueda desviar los acontecimientos
 ni un punto de su curso, entonces, tanto un ^asesinato^, como la
 ejecución de un reo, como una ^guerra^, son consecuencias de las leyes
 naturales, y nadie es responsable. Sólo quien haya dictado las leyes
-naturales es culpable. Solamente _Dios<único responsable> es
-responsable; usted y yo no. Y, para aquellos materialistas que no creen
-en Dios, nunca nadie es culpable de nada, sino que simplemente ocurre
-así.
+naturales es culpable. Solamente ^Dios^ es responsable; usted y yo no.
+Y, para aquellos materialistas que no creen en Dios, nunca nadie es
+culpable de nada, sino que simplemente ocurre así.
 
 
 \Section La ley del más fuerte
