letters/pentalfa.tex: editorial

--- a/letters/pentalfa.tex
+++ b/letters/pentalfa.tex
@@ -48,7 +48,7 @@ a vender más copias del libro.
 Le pido que sea benevolente, porque la 
 epistemología es una materia exigente con el lector y
 que no siempre puede ser simplificada.
-En fin, que espero que el libro sea de su agrado e interés,
+En fin, espero que el libro sea de su agrado e interés,
 y que pueda ser publicado por Pentalfa. 
 Un saludo,
 
