edc1.tex, edc.ndx: cambio "televisión" por "computadora"
Creo que es mejor ejemplo, porque además se trata de la computadora más
adelante, y de la televisión no.
De los otros ejemplos, la bomba atómica se usa para argumentar,
y el teléfono es un tributo personal.

--- a/edc1.tex
+++ b/edc1.tex
@@ -283,7 +283,7 @@ No obstante, repito, la ^ciencia^ materialista es la que nos proporciona
 más ^conocimiento^. Y no un poco más, sino, sin exagerar, enormemente
 más. Exagerando, pero sólo un poco, infinitamente más. Sólo tiene usted
 que pensar en los avances técnicos que disfrutamos, para entender lo que
-digo. La ^televisión^, el ^teléfono^ y la ^bomba atómica^ son productos
+digo. El ^teléfono^, la ^computadora^, y la ^bomba atómica^ son productos
 de la ciencia materialista; sin ella no serían posibles. Y la ciencia
 materialista ha alcanzado sus logros postulando que todo es materia, y
 que la ^libertad^ es una ilusión.
@@ -742,7 +742,7 @@ del espacio que tratamos mentalmente como una unidad a la que atribuimos
 algunas propiedades. Con estas propiedades resumimos toda la enorme
 cantidad de información que nuestros sentidos captan del área en
 cuestión. La razón por la cual nuestra representación mental utiliza
-objetos es que así se _simplifica<comprimir> el enorme caudal de datos
+objetos es porque así se _simplifica<comprimir> el enorme caudal de datos
 ^percibido^. Es tarea del objetivismo explicar por qué, si la
 representación mental es sencilla y remeda al objeto exterior, ocurre
 que la imagen retinal intermedia es tan compleja. Y es su tarea, porque
