edc3.tex: \S83 \P1, vida -> evolución
Es más preciso.

--- a/edc3.tex
+++ b/edc3.tex
@@ -1009,7 +1009,7 @@ sí que tiene resoluciones mejores y resoluciones peores:
 son mejores las capaces de solucionar más posibles problemas. 
 Cabe entonces plantear una meta-resolución que busque 
 resolutores cada vez mejores de un problema aparente.
-Y, con estas ideas, ya podemos encajar más precisamente la vida
+Y, con estas ideas, ya podemos encajar más precisamente la evolución
 en la ^teoría del problema^.
 
 La ^evolución^ darviniana es un proceso de ^resolución^ repetida del
