letters/pentalfa.tex: un par de mejoras al resumen

--- a/letters/pentalfa.tex
+++ b/letters/pentalfa.tex
@@ -97,7 +97,8 @@ Problema aparente: somos resoluciones. \s(81)
 
 Sintaxis recursiva: expresión de resoluciones. \s(94)
 
-Recursividad: {\sc Gödel} y {\sc Turing}. \s(101)
+{\sc Gödel} y {\sc Turing}:
+En toda sintaxis recursiva existen paradojas indetectables. \s(101)
 
 Evolución: mejora de resoluciones. \s(107)
 
@@ -118,6 +119,8 @@ El sentido de la vida: entendemos para vivir. \s(144)
 
 La epífisis de {\sc Descartes}: el motor sintáctico de {\sc Turing}. 
 \s(150)
+
+Conocimiento: herramienta de supervivencia. \s(153)
 
 Subjetivismo: el exterior no es subjetivo, pero tampoco podemos
 conocerlo. \s(157)
