letters/pentalfa.tex: versión final enviada por correo
He añadido un resumen apretado a un A4.
También he anotado el envío en letters/edcdis.tex.

--- a/letters/edcdis.tex
+++ b/letters/edcdis.tex
@@ -24,6 +24,7 @@
  Carlos Piera& 2008.11.24& 2008.03.12\\ 
  Editorial Trotta& 2009.05.04& 2008.03.12& Rechazado 2009.10.08\\
  Alianza Editorial& 2009.10.14& 2009.10.14& Rechazado 2009.11.19\\
+ Pentalfa Editorial& 2010.05.04& 2010.05.01\\
 \rule
 \endalign
 
