edc5.tex: Inclino la Lambda
En \S117 \P3 hay un display que tiene todas las letras inclinadas,
ahora. Faltaba por inclinar la Lambda.

--- a/edc5.tex
+++ b/edc5.tex
@@ -315,7 +315,7 @@ $$\hbox{\sl Habla\/} =
   \hbox{\sl Razón\/} =
   \hbox{\it Ratio\/} =
   \hbox{\it Logos\/} =
-  \Lambda\acute o\gamma o\varsigma$$
+  {\mit\Lambda}\acute o\gamma o\varsigma$$
 
 La consciencia sólo alcanza directamente las palabras. Lo que no se
 verbaliza, ni como ^pensamiento^ ni como ^habla^, queda inaccesible a la
