edc0.tex: reviso la front matter para hacerla publicable
Elimino mis direcciones (física y electrónica).
Elimino material con copyright (foto del Bugatti Atlantic).
Añado el cc-by-sa y el ISBN.
Completo la dedicatoria y el agradecimiento.

--- a/edc0.tex
+++ b/edc0.tex
@@ -16,11 +16,6 @@
 \vskip1.5pc
 \centerline{\fontzero El doble compresor}
 
-\vskip 3pc
-\centerline{\hbox{%
- \pdfximage width 8cm {1938-Bugatti-Type-57SC-Atlantic-Front.jpg}%
- \pdfrefximage\pdflastximage}}
-
 \vfill\break % [1] Autor y título
 
 \null
@@ -37,49 +32,40 @@
 
 \vfill\break % [3] Autor, Título, Subtítulo
 
-\null \vfill
+\null 
 
- Cualquier sugerencia o\par
- comentario dirigido a\par
- \indent\pdfcode \pdfstartlink attr{/Border [0 0 0]}
-   user{/Subtype /Link /A << /Type /Action
-    /S /URI /URI (mailto:r.casares@ieee.org) >>}\pdfendcode
-  {\tt r.casares@ieee.org}\pdfcode \pdfendlink \pdfendcode\par
- será bien recibido.\par
- Muchas gracias.
 
-\vglue 2pc
-
- El automovil que aparece en las fotografías de la página 1 y 169\par
- es un Bugatti Atlantic 57SC, de 1938,\par
- concretamente el que tiene el número de chasis 57591.\par
- Se trata del cuarto, y último, de los Atlantic que se construyeron.\par
- Michael Furman posee los derechos de copia de estas dos fotografías.\par
-
-\vglue 2pc
-
+\vfill
+ \hbox{\pdfximage width 3cm {amazon/cc-by-sa-1.pdf}\pdfrefximage\pdflastximage}
+ %\bigskip
  {\sl El doble compresor}\par
  {\sl La teoría de la información}\par
- Versión: \todayiso \par
- \copyright\ Ramón Casares, 2010\par
- C/ San Andrés, 112 (4º piso)\par
- E--15003 A Coruña ({\sc España})\par
- Teléfonos: 981 183 997 / 981 229 531\par
- Email: \pdfcode \pdfstartlink attr{/Border [0 0 0]}
-   user{/Subtype /Link /A << /Type /Action
-    /S /URI /URI (mailto:r.casares@ieee.org) >>}\pdfendcode
-  {\tt r.casares@ieee.org}\pdfcode \pdfendlink \pdfendcode \par
+ 1ª edición (\todayiso)\par
+ Publicado por {\tt www.ramoncasares.com}\par
+ \leavevmode
+ \hbox{\pdfximage width 8pt {amazon/cc.pdf}\pdfrefximage\pdflastximage}
+ \hbox{\pdfximage width 8pt {amazon/by.pdf}\pdfrefximage\pdflastximage}
+ \hbox{\pdfximage width 8pt {amazon/sa.pdf}\pdfrefximage\pdflastximage}
+ Ramón Casares, 2010\par
+ ISBN-13: 978-1-4536-0915-6\par
+ ISBN-10: 1-4536-0915-6\par
 
 \break % [4] Créditos
 
 
 \null
-\vfil
-\rightline{[Dedicatoria]}
-% A mis hijos Ramón e Inés
-\vfil
-\rightline{[Agradecimientos]}
-% A Valentín Fernández Vidal
+\vskip5pc
+\begingroup\it
+ % Dedicatoria
+ \rightline{A mis hijos Ramón e Inés}
+\vskip3pc
+ % Agradecimientos
+ \rightline{Valentín Fernández Vidal}
+ \rightline{sabe de este libro}
+ \rightline{más de lo que él mismo cree.}
+ \rightline{Muchas gracias.}
+ \rightline{R.C.}
+\endgroup
 \vfil
 \break % [5] Dedicatoria
 
