edc.tex: cambio de cm a lm
Eso. Así los lectores de pdf pueden buscar palabras con acentos.

--- a/edc.tex
+++ b/edc.tex
@@ -15,7 +15,8 @@
 
 % Fonts
 
-\cmfonts
+\lmfonts\lmtitles\ansifont
+ \font\tenrm=texnansi-lmr10
 \font\frakx=eufm10
 \font\frakvii=eufm7
 \newfam\frakfam \textfont\frakfam=\frakx \scriptfont\frakfam=\frakvii
