--- a/edc0.tex
+++ b/edc0.tex
@@ -42,11 +42,7 @@
  {\sl La teoría de la información}\par
  1ª edición (\todayiso)\par
  Publicado por {\tt www.ramoncasares.com}\par
- \leavevmode
- \hbox{\pdfximage width 8pt {amazon/cc.pdf}\pdfrefximage\pdflastximage}
- \hbox{\pdfximage width 8pt {amazon/by.pdf}\pdfrefximage\pdflastximage}
- \hbox{\pdfximage width 8pt {amazon/sa.pdf}\pdfrefximage\pdflastximage}
- Ramón Casares, 2010\par
+ \ccbysa\ Ramón Casares, 2010\par
  ISBN-13: 978-1-4536-0915-6\par
  ISBN-10: 1-4536-0915-6\par
 
