Bugatti-57591.tex: varias mejoras
Añado el copyright de las fotos. Llevo una de ellas al final.

Tambíen hago otras mejoras editoriales.

--- a/bugatti/Bugatti-57591.tex
+++ b/bugatti/Bugatti-57591.tex
@@ -13,7 +13,9 @@
 
 \title1 Concorso d'Eleganza Villa d'Este 2009:
 
-Bugatti Atlantic 57SC, 1938, owner Ralph Lauren (03/2009) - © BMW AG
+\noindent Bugatti Atlantic 57SC, 1938,
+ owner Ralph Lauren (03/2009) --- © BMW AG\\
+Photographs by © Michael Furman.
 
 Chassis \#57591 - The last Atlantic is the most published of the three
 and can probably claim to be the most original.
@@ -37,22 +39,17 @@ After the project was complete it was shown at the 1990 Pebble Beach
 Concours D'Elegance where it won best of show.
 Like many of Ralph's Bugattis the car is finished in black.
 
-\vskip 1pc
-\centerline{\hbox{%
- \pdfximage width 10cm 
-   {1938-Bugatti-Type-57SC-Atlantic_Rear2b.jpg}%
- \pdfrefximage\pdflastximage}}
 
 
  
-\title1 Bugatti Type 57SC Atlantic: Coup de Grace\\by Ken Gross
+\title1 Bugatti Type 57SC Atlantic: Coup de Grace
 
-People always ask if I have a favorite car — and I do. It's a Bugatti,
-the Type 57SC Atlantic.
+{\bf by Ken Gross}
 
-Although it's over 70 years old, the Atlantic's dramatic, art moderne
-shape, clouded history and race-inspired, supercharged straight-8 engine
-make it a timeless classic.
+People always ask if I have a favorite car --- and I do. It's a Bugatti,
+the Type 57SC Atlantic. Although it's over 70 years old, the Atlantic's
+dramatic, art moderne shape, clouded history and race-inspired,
+supercharged straight-8 engine make it a timeless classic.
 
 \title2 The Romance of the Streamline
 
@@ -187,9 +184,15 @@ sports car for the ages. Famed author Ken W.\ Purdy called Bugatti
 ``Imagine a string-straight, poplar-lined Route Nationale in France on a
 summer's day,'' Purdy wrote. ``That growing dot in the middle distance is
 a sky-blue Bugatti coupe rasping down from Paris to Nice at 110 miles
-an hour...''.
+an hour\dots''.
 
 Just watch those railroad crossings.
+
+\vfill
+\centerline{\hbox{%
+ \pdfximage width 10cm
+   {1938-Bugatti-Type-57SC-Atlantic_Rear.jpg}%
+ \pdfrefximage\pdflastximage}}
 
 \bye
 
