edc0.tex: añado web de licencia cc-by-sa en el catálogo pdf
Lo he leído en las mejores prácticas de cc para incorporar
la licencia en un pdf.

--- a/edc0.tex
+++ b/edc0.tex
@@ -1,10 +1,11 @@
 % edc0.tex (RMCG200050707)
 
-\pdfcode \begingroup\corkfont
+\pdfcode \begingroup%\corkfont
   \pdfinfo{
    /Author (© Ramón Casares 2010)
    /Title (El doble compresor)
    /Subject (La teoría de la información)
+   /Creator (Licencia http://creativecommons.org/licenses/by-sa/3.0/)
    /Keywords (filosofía epistemología problema
               sujeto objeto información)}
  \endgroup
